examples/type_system/failing/127_match_missing_arrow.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/127_match_missing_arrow.flx
// error[E034]: Missing Match Arm Arrow
//
// I was expecting `->` in this match arm, but I found an integer literal.
//
//   examples/type_system/failing/127_match_missing_arrow.flx:24:7
//    |
// 24 |     0 1,
//    |       ^
//
// Note:
//   while parsing `match` expression
//
// Help:
//   Write match arms as `match x { pattern -> body, ... }`.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E034

let x = match 1 {
    0 1,
    _ -> 0
}

let after = 42
